@@ -151,7 +151,7 @@
       filesize: [''].join('\n'),
       md5: [''].join('\n')
     },
-    sauces: ['http://iqdb.org/?url=$1', 'http://www.google.com/searchbyimage?image_url=$1', '#http://tineye.com/search?url=$1', '#http://saucenao.com/search.php?db=999&url=$1', '#http://3d.iqdb.org/?url=$1', '#http://regex.info/exif.cgi?imgurl=$2', '# uploaders:', '#http://imgur.com/upload?url=$2', '#http://omploader.org/upload?url1=$2', '# "View Same" in archives:', '#http://archive.foolz.us/search/image/$3/', '#http://archive.foolz.us/$4/search/image/$3/', '#https://archive.installgentoo.net/$4/image/$3'].join('\n'),
+    sauces: ['http://iqdb.org/?url=$1', 'http://www.google.com/searchbyimage?image_url=$1', '#http://tineye.com/search?url=$1', '#http://saucenao.com/search.php?db=999&url=$1', '#http://3d.iqdb.org/?url=$1', '#http://regex.info/exif.cgi?imgurl=$2', '# uploaders:', '#http://imgur.com/upload?url=$2;show:Upload to imgur', '#http://omploader.org/upload?url1=$2;show:Upload to omploader', '# "View Same" in archives:', '#http://archive.foolz.us/search/image/$3/;show:View same on foolz', '#http://archive.foolz.us/$4/search/image/$3/;show:View same on foolz /$4/', '#https://archive.installgentoo.net/$4/image/$3;show:View same on installgentoo /$4/'].join('\n'),
     time: '%m/%d/%y(%a)%H:%M',
     backlink: '>>%id',
     fileInfo: '%l (%p%s, %r)',
@@ -2238,7 +2238,8 @@
   <input type=radio name=tab hidden id=sauces_tab>\
   <div>\
     <div class=warning><code>Sauce</code> is disabled.</div>\
-    Lines starting with a <code>#</code> will be ignored.\
+    Lines starting with a <code>#</code> will be ignored.<br>\
+	You can specify a certain display text by appending ";show:[text]" to the url.\
     <ul>These parameters will be replaced by their corresponding values:\
       <li>$1: Thumbnail url.</li>\
       <li>$2: Full image url.</li>\
@@ -2768,8 +2769,7 @@
     },
     createSauceLink: function(link) {
       var domain, el, href;
-      domain = link.match(/(\w+)\.\w+\//)[1];
-      href = link.replace(/(\$\d)/g, function(parameter) {
+      link = link.replace(/(\$\d)/g, function(parameter) {
         switch (parameter) {
           case '$1':
             return "http://thumbs.4chan.org' + img.pathname.replace(/src(\\/\\d+).+$/, 'thumb$1s.jpg') + '";
@@ -2781,6 +2781,8 @@
             return g.BOARD;
         }
       });
+      domain = link.match(/;show:(.+)$/) ? link.match(/;show:(.+)$/)[1] : link.match(/(\w+)\.\w+\//)[1];
+      href = link.match(/;show:(.+)$/) ? link.match(/^(.+);show:.+$/)[1] : link;
       href = Function('img', "return '" + href + "'");
       el = $.el('a', {
         target: '_blank',
