@@ -107,12 +107,12 @@ Config =
     '#http://3d.iqdb.org/?url=$1'
     '#http://regex.info/exif.cgi?imgurl=$2'
     '# uploaders:'
-    '#http://imgur.com/upload?url=$2'
-    '#http://omploader.org/upload?url1=$2'
+    '#http://imgur.com/upload?url=$2;show:Upload to imgur'
+    '#http://omploader.org/upload?url1=$2;show:Upload to omploader'
     '# "View Same" in archives:'
-    '#http://archive.foolz.us/search/image/$3/'
-    '#http://archive.foolz.us/$4/search/image/$3/'
-    '#https://archive.installgentoo.net/$4/image/$3'
+    '#http://archive.foolz.us/search/image/$3/;show:View same on foolz'
+    '#http://archive.foolz.us/$4/search/image/$3/;show:View same on foolz /$4/'
+    '#https://archive.installgentoo.net/$4/image/$3;show:View same on installgentoo /$4/'
   ].join '\n'
   time: '%m/%d/%y(%a)%H:%M'
   backlink: '>>%id'
@@ -1707,7 +1707,8 @@ Options =
   <input type=radio name=tab hidden id=sauces_tab>
   <div>
     <div class=warning><code>Sauce</code> is disabled.</div>
-    Lines starting with a <code>#</code> will be ignored.
+    Lines starting with a <code>#</code> will be ignored.<br>
+	You can specify a certain display text by appending ";show:[text]" to the url.
     <ul>These parameters will be replaced by their corresponding values:
       <li>$1: Thumbnail url.</li>
       <li>$2: Full image url.</li>
@@ -2155,8 +2156,7 @@ Sauce =
     Main.callbacks.push @node
 
   createSauceLink: (link) ->
-    domain = link.match(/(\w+)\.\w+\//)[1]
-    href   = link.replace /(\$\d)/g, (parameter) ->
+    link = link.replace /(\$\d)/g, (parameter) ->
       switch parameter
         when '$1'
           "http://thumbs.4chan.org' + img.pathname.replace(/src(\\/\\d+).+$/, 'thumb$1s.jpg') + '"
@@ -2166,6 +2166,8 @@ Sauce =
           "' + encodeURIComponent(img.firstChild.dataset.md5) + '"
         when '$4'
           g.BOARD
+    domain = if link.match(/;show:(.+)$/) then link.match(/;show:(.+)$/)[1] else link.match(/(\w+)\.\w+\//)[1]
+    href = if link.match(/;show:(.+)$/) then link.match(/^(.+);show:.+$/)[1] else link
     href = Function 'img', "return '#{href}'"
     el = $.el 'a',
       target: '_blank'
