@@ -1,4 +1,6 @@
 master
+- btmcsweeney
+  Allow users to specify text for sauce links.
 - Mayhem
   Opera fixes.
   /f/ fixes.
